# Algal-bloom-modeling

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Example/: Examples.html  Examples.ipynb  Paint.py  main.py
Example/taihu_vector/: taihu_vector.dbf  taihu_vector.ebb  taihu_vector.eq1  taihu_vector.prj  taihu_vector.shp  taihu_vector.shp.qtr  taihu_vector.shx
Windows version for VS26/: Algal-blooming.slnx
Windows version for VS26/Algal-blooming/: Algal-blooming.vcxproj  Algal-blooming.vcxproj.filters  Earlywarning.h  SimulationShip.h  main.cpp  paintcompare.h  paintorigin.h  test.cpp  test.h
src/: Earlywarning.cpp  Earlywarning.h  SimulationShip.cpp  SimulationShip.h  main.cpp  paintcompare.cpp  paintcompare.h  paintorigin.cpp  paintorigin.h  test.cpp  test.h
